--- a/connect-examples/v2/node_orders-payments/views/includes/loyalty-panel.pug
+++ b/connect-examples/v2/node_orders-payments/views/includes/loyalty-panel.pug
@@ -12,18 +12,8 @@
 //- See the License for the specific language governing permissions and
 //- limitations under the License. 
 
-extends layout
-block append styles  
-  link(rel='stylesheet', href='/stylesheets/checkout.css')
-block content
-  div(class="tab") 
-    h1(class="page-title") Order Status
-    div(class="tab-content")
-      if order_info.isPickup
-        include includes/pickup-confirmation.pug
-      else
-        include includes/delivery-confirmation.pug
-      div(class="order-summary")
-        include includes/order-summary.pug
-        if (order_info.order.state === "COMPLETED")
-          include includes/add-loyalty-point.pug
+div(class="panel clearfix")
+    if (!loyalty_info.available_reward_tiers)
+        include ./attach-loyalty-account.pug
+    else
+        include ./redeem-loyalty-reward.pug
